@@ -20,6 +20,7 @@
 * spellchecker: switch default backend from aspell to enchant (aspell is still available) (beevvy)
 * core: #2551 done: use the most online account's status for the tray icon (ultr)
 * gui: #2581 fixed: properly ignore non-existing avatars (Vogel)
+* gui: #2069 fixed: toggle checkboxes when the items are clicked in Delete Buddy window (ultr)
 
 +++ version 0.12.0-beta1
 * tabs: "Close all tabs but active one" action added (Juzef)
